--- a/StarFleetManager/StarFleetManager/Components/_Imports.razor
+++ b/StarFleetManager/StarFleetManager/Components/_Imports.razor
@@ -10,3 +10,5 @@
 @using StarFleetManager
 @using StarFleetManager.Client
 @using StarFleetManager.Components
+@using StarFleetManager.Data.Services
+@using StarFleetManager.Library.Models
