--- a/StarFleetManager/StarFleetManager.Client/_Imports.razor
+++ b/StarFleetManager/StarFleetManager.Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using StarFleetManager.Client
 @using StarFleetManager.Library.Models
+@using StarFleetManager.Library.ViewModels
+
