--- a/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
+++ b/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
@@ -21,7 +21,7 @@ else
 }
 
 @code{
-    private List<StarShip> _starShips = new();
+    private List<StarShipView> _starShips = new();
 
     protected override async Task OnInitializedAsync()
     {
