--- a/StarFleetManager/StarFleetManager/Components/_Imports.razor
+++ b/StarFleetManager/StarFleetManager/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using StarFleetManager.Components
 @using StarFleetManager.Data.Services
 @using StarFleetManager.Library.Models
+@using StarFleetManager.Library.ViewModels
