Update starship service

--- a/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
+++ b/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
@@ -27,7 +27,7 @@ else
     {
         if(_starShips.Count == 0 || _starShips is null)
         {
-            _starShips = await StarShipService.GetAllAsync();
+            //_starShips = await StarShipService.GetAllAsync();
         }
     }
 }
