--- a/StarFleetManager/StarFleetManager/Components/_Imports.razor
+++ b/StarFleetManager/StarFleetManager/Components/_Imports.razor
@@ -9,6 +9,7 @@
 @using Microsoft.JSInterop
 @using StarFleetManager
 @using StarFleetManager.Client
+@using StarFleetManager.Client.Components
 @using StarFleetManager.Components
 @using StarFleetManager.Data.Services
 @using StarFleetManager.Library.Models
