--- a/StarFleetManager/StarFleetManager.Client/Components/EditStarShip.razor
+++ b/StarFleetManager/StarFleetManager.Client/Components/EditStarShip.razor
@@ -1,102 +1,109 @@
 ﻿
 <EditForm Model="@StarShip" OnValidSubmit="SaveStarShip" >
     <p>Star Ship Info:</p>
+    <DataAnnotationsValidator />
+    <ValidationSummary class="text-danger" role="alert" />
     <div class="form-floating mb-3">
         <InputText aria-label="name" @bind-Value="StarShip.Name" class="form-control" />
         <label for="name">Name</label>
+        <ValidationMessage For="() => StarShip.Name" class="text-danger" />
     </div>
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.Model" class="form-control" />
+        <InputText aria-label="model" @bind-Value="StarShip.Model" class="form-control" />
         <label for="model">Model</label>
+        <ValidationMessage For="() => StarShip.Model" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.Manufacturer" class="form-control" />
+        <InputText aria-label="manufacturer" @bind-Value="StarShip.Manufacturer" class="form-control" />
         <label for="manufacturer">Manufacturer</label>
+        <ValidationMessage For="() => StarShip.Manufacturer" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.CostInCredits" class="form-control" />
+        <InputText aria-label="costInCredits" @bind-Value="StarShip.CostInCredits" class="form-control" />
         <label for="costInCredits">Cost (In Credits)</label>
+        <ValidationMessage For="() => StarShip.CostInCredits" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.Length" class="form-control" />
+        <InputText aria-label="length" @bind-Value="StarShip.Length" class="form-control" />
         <label for="length">Length</label>
+        <ValidationMessage For="() => StarShip.Length" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.MaxAtmospheringSpeed" class="form-control" />
+        <InputText aria-label="maxAtmospheringSpeed" @bind-Value="StarShip.MaxAtmospheringSpeed" class="form-control" />
         <label for="maxAtmospheringSpeed">Maximum Atmosphering Speed</label>
+        <ValidationMessage For="() => StarShip.MaxAtmospheringSpeed" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.Crew" class="form-control" />
+        <InputText aria-label="crew" @bind-Value="StarShip.Crew" class="form-control" />
         <label for="crew">Crew</label>
+        <ValidationMessage For="() => StarShip.Crew" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.Passengers" class="form-control" />
+        <InputText aria-label="passengers" @bind-Value="StarShip.Passengers" class="form-control" />
         <label for="passengers">Passengers</label>
+        <ValidationMessage For="() => StarShip.Passengers" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.CargoCapacity" class="form-control" />
+        <InputText aria-label="cargoCapacity" @bind-Value="StarShip.CargoCapacity" class="form-control" />
         <label for="cargoCapacity">Cargo Capacity</label>
+        <ValidationMessage For="() => StarShip.CargoCapacity" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.Consumables" class="form-control" />
+        <InputText aria-label="consumables" @bind-Value="StarShip.Consumables" class="form-control" />
         <label for="consumables">Consumables</label>
+        <ValidationMessage For="() => StarShip.Consumables" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.HyperdriveRating" class="form-control" />
+        <InputText aria-label="hyperdriveRating" @bind-Value="StarShip.HyperdriveRating" class="form-control" />
         <label for="hyperdriveRating">Hyperdrive Rating</label>
+        <ValidationMessage For="() => StarShip.HyperdriveRating" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.MGLT" class="form-control" />
+        <InputText aria-label="mglt" @bind-Value="StarShip.MGLT" class="form-control" />
         <label for="mglt">MGLT</label>
+        <ValidationMessage For="() => StarShip.MGLT" class="text-danger" />
     </div>
     
     <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.StarshipClass" class="form-control" />
+        <InputText aria-label="starshipClass" @bind-Value="StarShip.StarshipClass" class="form-control" />
         <label for="starshipClass">Class</label>
+        <ValidationMessage For="() => StarShip.StarshipClass" class="text-danger" />
     </div>
-    
-    @* <div class="form-floating mb-3">
-        <label for=""></label>
+
+    <div class="form-floating mb-3">
+        <InputTextArea aria-label="starshipClass" @bind-Value="_selectedFilms" class="form-control" />
+        <label for="films">Films</label>
+        <p>Enter fim urls separated by commas</p>
+        <ValidationMessage For="() => StarShip.Films" class="text-danger" />
     </div>
-        <InputText aria-label="" @bind-Value="StarShip.Pilots" class="form-control" />
-        <div class="form-floating mb-3">
-        <label for=""></label>
-    </div>
-    <InputText aria-label="" @bind-Value="StarShip.Films" class="form-control" /> *@
-    @* <div class="form-floating mb-3">
-        <InputDate aria-label="" @bind-Value="StarShip.Created" class="form-control" />
-        <label for=""></label>
-    </div> *@
-    
-    @* <div class="form-floating mb-3">
-        <InputDate aria-label="" @bind-Value="StarShip.Edited" class="form-control" />
-        <label for=""></label>
-    </div> *@
-    
-    @* <div class="form-floating mb-3">
-        <InputText aria-label="" @bind-Value="StarShip.Url" class="form-control" />
-        <label for="url">Url</label>
-    </div> *@
     
     <button class="btn btn-success" type="submit">Save Starship</button>
 </EditForm>
+
+
 
 @code {
     [Parameter]
     public StarShipView? StarShip { get; set; }
 
+    // [Parameter]
+    // public List<string>? FilmUrls { get; set; }
+
     [Parameter]
     public EventCallback<StarShipView> SaveShipCallback { get; set; }
+
+    private List<string> _filmUrls = new();
+    private string _selectedFilms = string.Empty;
 
     protected override async Task OnParametersSetAsync()
     {
@@ -104,11 +111,56 @@
         {
             StarShip = new();
         }
+        if (_filmUrls.Count == 0)
+        {
+            _filmUrls = FilmUrls();
+        }
+
+        //_selectedFilms = StarShip.Films ?? new List<string>();
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+
     }
 
     private async Task SaveStarShip()
     {
+        StarShip.Films = ParseSelectedFilms();
+        StarShip.Created = StarShip.Created < DateTime.Now ? StarShip.Created : DateTime.Now;
         StarShip.Edited = DateTime.Now;
         await SaveShipCallback.InvokeAsync(StarShip);
+    }
+
+    private List<string> FilmUrls()
+    {
+        return new List<string>
+        {
+            "https://swapi.info/api/films/1",
+            "https://swapi.info/api/films/2",
+            "https://swapi.info/api/films/3",
+            "https://swapi.info/api/films/4",
+            "https://swapi.info/api/films/5",
+            "https://swapi.info/api/films/6"
+        };
+
+    }
+
+    private List<string> ParseSelectedFilms()
+    {
+        List<string> films = new();
+        if (!string.IsNullOrEmpty(_selectedFilms))
+        {
+            try
+            {
+                films = _selectedFilms.Split(',').ToList();
+                foreach(string film in films)
+                {
+                    film.Trim();
+                }
+            }
+            catch(Exception ex){}
+        }
+        return films;
     }
 }
