--- a/StarFleetManager/StarFleetManager.Client/Components/EditStarShip.razor
+++ b/StarFleetManager/StarFleetManager.Client/Components/EditStarShip.razor
@@ -80,10 +80,18 @@
         <ValidationMessage For="() => StarShip.StarshipClass" class="text-danger" />
     </div>
 
+    <hr />
+    <p>Enter the pilot & film urls separated by commas</p>
+    
     <div class="form-floating mb-3">
-        <InputTextArea aria-label="starshipClass" @bind-Value="_selectedFilms" class="form-control" />
+        <InputTextArea aria-label="pilots" @bind-Value="_selectedPilots" class="form-control" />
+        <label for="pilots">Pilots</label>
+        <ValidationMessage For="() => StarShip.Films" class="text-danger" />
+    </div>
+
+    <div class="form-floating mb-3">
+        <InputTextArea aria-label="films" @bind-Value="_selectedFilms" class="form-control" />
         <label for="films">Films</label>
-        <p>Enter fim urls separated by commas</p>
         <ValidationMessage For="() => StarShip.Films" class="text-danger" />
     </div>
     
@@ -104,6 +112,7 @@
 
     private List<string> _filmUrls = new();
     private string _selectedFilms = string.Empty;
+    private string _selectedPilots = string.Empty;
 
     protected override async Task OnParametersSetAsync()
     {
@@ -126,7 +135,8 @@
 
     private async Task SaveStarShip()
     {
-        StarShip.Films = ParseSelectedFilms();
+        StarShip.Films = ParseTextAreaEntry(_selectedFilms);
+        StarShip.Pilots = ParseTextAreaEntry(_selectedPilots);
         StarShip.Created = StarShip.Created < DateTime.Now ? StarShip.Created : DateTime.Now;
         StarShip.Edited = DateTime.Now;
         await SaveShipCallback.InvokeAsync(StarShip);
@@ -146,21 +156,21 @@
 
     }
 
-    private List<string> ParseSelectedFilms()
+    private List<string> ParseTextAreaEntry(string entry)
     {
-        List<string> films = new();
+        List<string> items = new();
         if (!string.IsNullOrEmpty(_selectedFilms))
         {
             try
             {
-                films = _selectedFilms.Split(',').ToList();
-                foreach(string film in films)
+                items = _selectedFilms.Split(',').ToList();
+                foreach (string item in items)
                 {
-                    film.Trim();
+                    item.Trim();
                 }
             }
             catch(Exception ex){}
         }
-        return films;
+        return items;
     }
 }
