--- a/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
+++ b/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
@@ -6,14 +6,28 @@
 
 <h1>Starships</h1>
 
-@if (_creatingStarship)
-{
-    <EditStarShip SaveShipCallback="@AddStarShip"/>
-}
+
+<div class="modal fade" id="editModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick="ToggleOffCreateStarShip"></button>
+            </div>
+            <div class="modal-body">
+                <EditStarShip SaveShipCallback="@AddStarShip" />
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" @onclick="ToggleOffCreateStarShip">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 @if(_starShips.Count > 0)
 {
-    <button class="btn btn-secondary" @onclick="CreateStarShip">Create a StarShip</button>
+    <button class="btn btn-secondary"  data-bs-toggle="modal" data-bs-target="#editModal">Create a StarShip</button>
     <ul>
         @foreach(var ship in _starShips)
         {
@@ -56,9 +70,17 @@ else
         _creatingStarship = true;
     }
 
+    private void ToggleOffCreateStarShip()
+    {
+        _creatingStarship = false;
+        StateHasChanged();
+    }
+
     public async Task AddStarShip(StarShipView ship)
     {
         bool shipSaved = await StarShipService.DbAddStarShipAsync(ship);
+        _starShips.Clear();
+        _starShips = await StarShipService.GetAllAsync();
         _creatingStarship = !shipSaved;
         StateHasChanged();
     }
