--- a/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
+++ b/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
@@ -12,13 +12,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick="ToggleOffCreateStarShip"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" ></button>
             </div>
             <div class="modal-body">
-                <EditStarShip SaveShipCallback="@AddStarShip" />
+                <EditStarShip @ref="_starShipEdit" SaveShipCallback="@SubmitStarShip" />
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" @onclick="ToggleOffCreateStarShip">Close</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >Close</button>
             </div>
         </div>
     </div>
@@ -27,19 +27,19 @@
 
 @if(_starShips is not null && _starShips.Count > 0)
 {
-    <Table StarShips="_starShips" />
+    <Table StarShips="_starShips" EditShipCallBack="SetStarShipForEdit" />
 }
 else
 {
     <p>Your fleet is empty Admiral! What would you like to do?</p>
     <button class="btn btn-primary" @onclick="FillFleet">Seed Database</button>
-    <button class="btn btn-secondary" @onclick="CreateStarShip">Create a StarShip</button>
+    <button class="btn btn-secondary" >Create a StarShip</button>
 }
 
 @code{
     private List<StarShipView> _starShips { get; set; } = new();
     private List<string> _filmUrls = new();
-    private bool _creatingStarship = false;
+    private EditStarShip _starShipEdit = new();
 
     protected override async Task OnInitializedAsync()
     {
@@ -55,23 +55,35 @@ else
         StateHasChanged();
     }
 
-    private void CreateStarShip()
-    {
-        _creatingStarship = true;
-    }
+    // private void ToggleCreateStarShip(bool isCreating)
+    // {
+    //     _creatingStarship = isCreating;
+    // }
 
-    private void ToggleOffCreateStarShip()
-    {
-        _creatingStarship = false;
-        StateHasChanged();
-    }
+    // private void ToggleOffCreateStarShip()
+    // {
+    //     _creatingStarship = false;
+    //     StateHasChanged();
+    // }
 
-    public async Task AddStarShip(StarShipView ship)
+    public async Task SubmitStarShip(StarShipView ship)
     {
-        bool shipSaved = await StarShipService.DbAddStarShipAsync(ship);
+        if(ship.Id == 0)
+        {
+            await StarShipService.DbAddStarShipAsync(ship);
+        }
+        else
+        {
+            await StarShipService.DbUpdateStarShipAsync(ship);
+        }
+
         _starShips.Clear();
         _starShips = await StarShipService.GetAllAsync();
-        _creatingStarship = !shipSaved;
         StateHasChanged();
+    }
+
+    public void SetStarShipForEdit(StarShipView ship)
+    {
+        _starShipEdit.StarShip = ship;
     }
 }
