--- a/StarFleetManager/StarFleetManager.Client/Components/Table.razor
+++ b/StarFleetManager/StarFleetManager.Client/Components/Table.razor
@@ -129,7 +129,7 @@
                         <td>
                             <div class="col">
                                 <div class="row">
-                                    <button class="btn btn-sm btn-warning w-50 m-1" data-bs-toggle="modal" data-bs-target="#editModal" @onclick="() => EditShip(ship)">
+                                    <button class="btn btn-sm btn-warning w-75 m-1" data-bs-toggle="modal" data-bs-target="#editModal" @onclick="() => EditShip(ship)">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                                             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
                                             <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
@@ -138,7 +138,7 @@
                                     </button>
                                 </div>
                                 <div class="row">
-                                    <button class="btn btn-sm btn-danger w-50 m-1" @onclick="() => ToggleDelete(ship)">
+                                    <button class="btn btn-sm btn-danger w-75 m-1" @onclick="() => ToggleDelete(ship)">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
                                             <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
                                         </svg>
@@ -152,13 +152,10 @@
                     {
                         <tr class="table-secondary" style="display:@(ship.DisplayDeleteButton ? "table-row" : "none")">
                             <td colspan="11">
-                                <table class="table table-sm mb-0">
-
-                                </table>
                                 <div class="row text-center justify-content-center">
                                     <span class="text-danger">Are you sure you want to delete your @ship.Name?</span>
-                                    <button class="btn btn-sm btn-outline-danger w-25 mx-1">Delete</button>
-                                    <button class="btn btn-sm btn-outline-info w-25 mx-1" @onclick="() => ToggleDelete(ship)">Cancel</button>
+                                    <button class="btn btn-sm btn-danger w-25 mx-1" @onclick="() => DeleteShip(ship)">Delete</button>
+                                    <button class="btn btn-sm btn-info w-25 mx-1" @onclick="() => ToggleDelete(ship)">Cancel</button>
                                 </div>
                             </td>
                         </tr>
@@ -179,6 +176,9 @@
     [Parameter]
     public EventCallback<StarShipView> EditShipCallBack { get; set; }
 
+    [Parameter]
+    public EventCallback<StarShipView> DeleteShipCallBack { get; set; }
+
     private void ToggleAdditionalDetails(StarShipView ship)
     {
         ship.DisplayAdditionalDetails = !ship.DisplayAdditionalDetails;
@@ -192,5 +192,10 @@
     private void EditShip(StarShipView ship)
     {
         EditShipCallBack.InvokeAsync(ship);
+    }
+
+    private void DeleteShip(StarShipView ship)
+    {
+        DeleteShipCallBack.InvokeAsync(ship);
     }
 }
