--- a/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
+++ b/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
@@ -1,5 +1,5 @@
-﻿@page "/"
-@rendermode InteractiveServer
+﻿@rendermode @(new InteractiveServerRenderMode(prerender: false))
+@page "/"
 @inject IStarShipService StarShipService
 
 <PageTitle>Home</PageTitle>
