Check in current styling

--- a/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
+++ b/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Starships</h1>
+<h1 class="sw-yellow">Starships</h1>
 
 
 <div class="modal fade" id="editModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
