--- a/StarFleetManager/StarFleetManager/Components/Account/Pages/Login.razor
+++ b/StarFleetManager/StarFleetManager/Components/Account/Pages/Login.razor
@@ -12,9 +12,11 @@
 
 <PageTitle>Log in</PageTitle>
 
-<h1>Log in</h1>
-<div class="row">
+
+<div class="row justify-content-center">
+    
     <div class="col-md-4">
+        <h1>Log in</h1>
         <section>
             <StatusMessage Message="@errorMessage" />
             <EditForm Model="Input" method="post" OnValidSubmit="LoginUser" FormName="login">
@@ -39,7 +41,7 @@
                     </label>
                 </div>
                 <div>
-                    <button type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button type="submit" class="w-100 btn btn-lg btn-warning">Log in</button>
                 </div>
                 <div>
                     <p>
@@ -53,13 +55,6 @@
                     </p>
                 </div>
             </EditForm>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            <ExternalLoginPicker />
         </section>
     </div>
 </div>
