--- a/StarFleetManager/StarFleetManager/Components/Layout/MainLayout.razor.css
+++ b/StarFleetManager/StarFleetManager/Components/Layout/MainLayout.razor.css
@@ -17,7 +17,7 @@ main {
 
 .top-row {
     /*background-color: #f7f7f7;*/
-    background-color: white; /*#c495f0; #ffe81f;*/
+    background-color: #ffe81f; /*#c495f0; #ffe81f;*/
     /*border-bottom: 1px solid #d6d5d5;*/
     border-bottom: 1px solid black;
     justify-content: flex-end;
@@ -83,7 +83,7 @@ main {
 }
 
 #blazor-error-ui {
-    background: lightyellow;
+    background: #ffe81f;
     bottom: 0;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
     display: none;
