Add refill db methods, restyle edit form

--- a/StarFleetManager/StarFleetManager.Client/Components/EditStarShip.razor
+++ b/StarFleetManager/StarFleetManager.Client/Components/EditStarShip.razor
@@ -1,89 +1,118 @@
 ﻿
 <EditForm Model="@StarShip" OnValidSubmit="SaveStarShip">
-    <p>Star Ship Info:</p>
+    <p>Star Ship Details</p>
     <DataAnnotationsValidator />
     <ValidationSummary class="text-danger" role="alert" />
-    <div class="form-floating mb-3">
-        <InputText aria-label="name" @bind-Value="StarShip.Name" class="form-control" />
+    
+    <div class="form-group mb-3">
         <label for="name">Name</label>
+        <div class="input-group input-group-sm">
+            <InputText id="name" aria-label="name" @bind-Value="StarShip.Name" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.Name" class="text-danger" />
     </div>
-    <div class="form-floating mb-3">
-        <InputText aria-label="model" @bind-Value="StarShip.Model" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="model">Model</label>
+        <div class="input-group input-group-sm">
+            <InputText id="model" aria-label="model" @bind-Value="StarShip.Model" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.Model" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="manufacturer" @bind-Value="StarShip.Manufacturer" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="manufacturer">Manufacturer</label>
+        <div class="input-group input-group-sm">
+            <InputText id="manufacturer" aria-label="manufacturer" @bind-Value="StarShip.Manufacturer" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.Manufacturer" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="costInCredits" @bind-Value="StarShip.CostInCredits" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="costInCredits">Cost (In Credits)</label>
+        <div class="input-group input-group-sm">
+            <InputText id="costInCredits" aria-label="costInCredits" @bind-Value="StarShip.CostInCredits" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.CostInCredits" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="length" @bind-Value="StarShip.Length" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="length">Length</label>
+        <div class="input-group input-group-sm">
+            <InputText id="length" aria-label="length" @bind-Value="StarShip.Length" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.Length" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="maxAtmospheringSpeed" @bind-Value="StarShip.MaxAtmospheringSpeed" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="maxAtmospheringSpeed">Maximum Atmosphering Speed</label>
+        <div class="input-group input-group-sm">
+            <InputText id="maxAtmospheringSpeed" aria-label="maxAtmospheringSpeed" @bind-Value="StarShip.MaxAtmospheringSpeed" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.MaxAtmospheringSpeed" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="crew" @bind-Value="StarShip.Crew" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="crew">Crew</label>
+        <div class="input-group input-group-sm">
+            <InputText id="crew" aria-label="crew" @bind-Value="StarShip.Crew" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.Crew" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="passengers" @bind-Value="StarShip.Passengers" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="passengers">Passengers</label>
+        <div class="input-group input-group-sm">
+            <InputText id="passengers" aria-label="passengers" @bind-Value="StarShip.Passengers" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.Passengers" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="cargoCapacity" @bind-Value="StarShip.CargoCapacity" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="cargoCapacity">Cargo Capacity</label>
+        <div class="input-group input-group-sm">
+            <InputText id="cargoCapacity" aria-label="cargoCapacity" @bind-Value="StarShip.CargoCapacity" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.CargoCapacity" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="consumables" @bind-Value="StarShip.Consumables" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="consumables">Consumables</label>
+        <div class="input-group input-group-sm">
+            <InputText id="consumables" aria-label="consumables" @bind-Value="StarShip.Consumables" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.Consumables" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="hyperdriveRating" @bind-Value="StarShip.HyperdriveRating" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="hyperdriveRating">Hyperdrive Rating</label>
+        <div class="input-group input-group-sm">
+            <InputText id="hyperdriveRating" aria-label="hyperdriveRating" @bind-Value="StarShip.HyperdriveRating" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.HyperdriveRating" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="mglt" @bind-Value="StarShip.MGLT" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="mglt">MGLT</label>
+        <div class="input-group input-group-sm">
+            <InputText id="mglt" aria-label="mglt" @bind-Value="StarShip.MGLT" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.MGLT" class="text-danger" />
     </div>
-    
-    <div class="form-floating mb-3">
-        <InputText aria-label="starshipClass" @bind-Value="StarShip.StarshipClass" class="form-control" />
+
+    <div class="form-group mb-3">
         <label for="starshipClass">Class</label>
+        <div class="input-group input-group-sm">
+            <InputText id="starshipClass" aria-label="starshipClass" @bind-Value="StarShip.StarshipClass" class="form-control" />
+        </div>
         <ValidationMessage For="() => StarShip.StarshipClass" class="text-danger" />
     </div>
+
 
     <hr />
 
     <p>Enter the pilot & film urls separated by commas</p>
-    
+
     <div class="form-floating mb-3">
         <InputTextArea aria-label="pilots" @bind-Value="_selectedPilots" class="form-control" />
         <label for="pilots">Pilots</label>
@@ -95,7 +124,7 @@
         <label for="films">Films</label>
         <ValidationMessage For="() => StarShip.Films" class="text-danger" />
     </div>
-    
+
     <button class="btn btn-success" type="submit" data-bs-dismiss="modal">Save Starship</button>
 </EditForm>
 
