--- a/StarFleetManager/StarFleetManager.Client/Components/Table.razor
+++ b/StarFleetManager/StarFleetManager.Client/Components/Table.razor
@@ -4,19 +4,32 @@
 @inject AuthenticationStateProvider AuthStateProvider
 
 <div class="table-responsive">
-    <input id="table-filter" name="table-filter" class="form-control m-1" @bind="_enteredFilter" @oninput="UpdateTableFilter" placeholder="Search your Fleet..." style="width: 20rem;" />
-    <div class="form-text" id="basic-addon4">Filters by Name, Model, Manufacturer or class</div>
+    <div class="container-md my-1">
+        <div class="row justify-content-start">
+            <div class="col-sm-4">
+                <input id="table-filter" name="table-filter" class="form-control m-1" @bind="_enteredFilter" @oninput="UpdateTableFilter" placeholder="Search your Fleet..." style="width: 20rem;" />
+                <div class="form-text mx-1" id="basic-addon4">Filters by Name, Model, Manufacturer or Class</div>
+            </div>
+        </div>
+    </div>
+    
+    
     <table class="table table-sm">
         <thead>
             <tr>
                 <th scope="col">
-                    <button class="btn btn-outline-warning btn-sm" hidden="@(!isLoggedIn)" data-bs-toggle="modal" data-bs-target="#editModal">
+                    <button class="btn btn-outline-warning btn-sm my-1" hidden="@(!isLoggedIn)" data-bs-toggle="modal" data-bs-target="#editModal" title="Refill the database">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z" />
+                            <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466" />
+                        </svg>
+                    </button>
+                    <button class="btn btn-outline-warning btn-sm" hidden="@(!isLoggedIn)" data-bs-toggle="modal" data-bs-target="#editModal" title="Add a StarShip">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-database-add" viewBox="0 0 16 16">
                             <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0" />
                             <path d="M12.096 6.223A5 5 0 0 0 13 5.698V7c0 .289-.213.654-.753 1.007a4.5 4.5 0 0 1 1.753.25V4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16c.536 0 1.058-.034 1.555-.097a4.5 4.5 0 0 1-.813-.927Q8.378 15 8 15c-1.464 0-2.766-.27-3.682-.687C3.356 13.875 3 13.373 3 13v-1.302c.271.202.58.378.904.525C4.978 12.71 6.427 13 8 13h.027a4.6 4.6 0 0 1 0-1H8c-1.464 0-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10q.393 0 .774-.024a4.5 4.5 0 0 1 1.102-1.132C9.298 8.944 8.666 9 8 9c-1.464 0-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777M3 4c0-.374.356-.875 1.318-1.313C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4" />
                         </svg>
                     </button>
-                    
                 </th>
                 @foreach (var prop in typeof(StarShipView)
                                 .GetProperties()
@@ -51,7 +64,7 @@
             {
                 <tr>
                     <td>
-                        <button class="btn btn-outline-warning btn-sm" style="margin: 0 5px 0 0;" @onclick="() => ToggleAdditionalDetails(ship)">
+                        <button class="btn btn-outline-warning btn-sm" style="margin: 0 5px 0 0;" @onclick="() => ToggleAdditionalDetails(ship)" title="Show more info">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-slash-minus" viewBox="0 0 16 16">
                                 <path d="m1.854 14.854 13-13a.5.5 0 0 0-.708-.708l-13 13a.5.5 0 0 0 .708.708M4 1a.5.5 0 0 1 .5.5v2h2a.5.5 0 0 1 0 1h-2v2a.5.5 0 0 1-1 0v-2h-2a.5.5 0 0 1 0-1h2v-2A.5.5 0 0 1 4 1m5 11a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5A.5.5 0 0 1 9 12" />
                             </svg>
@@ -203,6 +216,9 @@
     [Parameter]
     public EventCallback<StarShipView> DeleteShipCallBack { get; set; }
 
+    [Parameter]
+    public EventCallback RefillDataBaseCallback { get; set; }
+
     private List<StarShipView> _sortedShips = new();
     private string _enteredFilter = string.Empty;
     private string _tableFilter = string.Empty;
@@ -275,10 +291,15 @@
         }
         catch(Exception ex)
         {
-            
+
         }
-        
+
         StateHasChanged();
+    }
+
+    private void RefillDb()
+    {
+        RefillDataBaseCallback.InvokeAsync();
     }
 
     private object GetSortValue(StarShipView s) =>
